Changelog for Mojolicious-Plugin-AutoReload

{{ $NEXT }}

0.004     2018-12-31 21:14:53-06:00 America/Chicago

    [Added]

    - Added hook to automatically add auto-reload script to the page.
      Now the only thing a user has to do to use this plugin is add it.

0.003     2018-11-03 16:32:28-05:00 America/Chicago

    [Fixed]

    - Fixed server ping only happening once, causing more inactivity
      timeouts
    - Increased interval between client pings, since they aren't being
      actually used for anything except keeping the connection alive

0.002     2018-11-03 15:39:50-05:00 America/Chicago

    [Fixed]

    - Increased inactivity timeout to reduce spurious log messages and
      reconnections
    - Wait one second before reloading to give the server some time to
      restart

0.001     2018-03-18 15:49:51-05:00 America/Chicago

    Initial Release